--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kidtracker",
+  "name": "ChildScheduleManagement",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -12,10 +12,42 @@
     "expo": "~52.0.32",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
-    "react-native": "0.76.7"
+    "react-native": "0.76.7",
+    "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
+    "@reduxjs/toolkit": "^2.2.7",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.8",
+    "@types/react": "~18.3.12",
+    "axios": "^1.7.7",
+    "react-dom": "18.3.1",
+    "react-native-actions-sheet": "^0.9.7",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-pager-view": "6.4.1",
+    "react-native-paper": "^5.12.5",
+    "react-native-safe-area-context": "^4.12.0",
+    "react-native-screens": "~4.0.0",
+    "react-native-tab-view": "^3.5.2",
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-web": "~0.19.13",
+    "react-redux": "^9.1.2",
+    "typescript": "~5.3.3",
+    "upgrade": "^1.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/geojson": "^7946.0.14",
+    "@types/istanbul-lib-coverage": "^2.0.6",
+    "@types/istanbul-lib-report": "^3.0.3",
+    "@types/istanbul-reports": "^3.0.4",
+    "@types/node": "^22.5.5",
+    "@types/yargs": "^17.0.33",
+    "@types/yargs-parser": "^21.0.3",
+    "istanbul-reports": "^3.1.7"
   },
   "private": true
 }
