--- a/package.json
+++ b/package.json
@@ -9,13 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~52.0.32",
-    "expo-status-bar": "~2.0.1",
-    "react": "18.3.1",
-    "react-native": "0.76.7",
+    "@expo/metro-runtime": "~4.0.1",
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-community/datetimepicker": "8.2.0",
+    "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
@@ -24,20 +22,26 @@
     "@rneui/themed": "^4.0.0-rc.8",
     "@types/react": "~18.3.12",
     "axios": "^1.7.7",
+    "expo": "~52.0.32",
+    "expo-status-bar": "~2.0.1",
+    "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-native": "0.76.7",
     "react-native-actions-sheet": "^0.9.7",
     "react-native-dotenv": "^3.4.11",
+    "react-native-dropdown-picker": "^5.4.6",
+    "react-native-event-listeners": "^1.0.7",
     "react-native-pager-view": "6.4.1",
-    "react-native-paper": "^5.12.5",
+    "react-native-paper": "^5.13.1",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.0.0",
+    "react-native-switch-toggle": "^2.2.1",
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
     "react-redux": "^9.1.2",
     "typescript": "~5.3.3",
-    "upgrade": "^1.1.0",
-    "react-native-event-listeners": "^1.0.7"
+    "upgrade": "^1.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
